# query_processing

./: CMakeLists.txt  Explanation.txt  Partner.txt  Readme.org
Benchmarks/: AdvancedDB2022Coursework1Benchmarks.cpp
Source/: AdvancedDB2022Coursework1.cpp  AdvancedDB2022Coursework1.hpp
Tests/: AdvancedDB2022Coursework1Tests.cpp
